.k8s/app/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app: ${STARTUP}
    component: app
    namespace: ${STARTUP}-${NAMESPACE_ENVIRONMENT}
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ${APP_URL}
    http:
      paths:
        - path: /
          backend:
            serviceName: app
            servicePort: ${PORT}
  tls:
    - hosts:
        - ${APP_URL}
      secretName: wildcard-crt
